examples/test/testpolicy13552.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13552
  namespace: namespace99
spec:
  podSelector:
    matchLabels:
      key29: value38
      key31: value23
      key10: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value19
      podSelector:
        matchLabels:
          key29: value47
